--- a/build.gradle
+++ b/build.gradle
@@ -12,21 +12,31 @@ plugins {
 }
 
 sourceSets {
-    jenkins {
+    main {
+        java { 
+            srcDirs = [] 
+        }
         groovy {
-            srcDirs = ['src']
+            srcDirs = ["$rootDir/src", "$rootDir/vars"]
+        }
+        resources {
+            srcDirs=  ["$rootDir/resources"]
         }
     }
 
     test {
+        java { 
+            srcDirs = [] 
+        }
         groovy {
-            srcDirs = ['test']
+            srcDirs = ["$rootDir/test"]
         }
         resources {
-            srcDirs = ['test-resources']
+            srcDirs = ["$rootDir/test-resources"]
         }
     }
 }
+
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -34,6 +44,7 @@ repositories {
 }
 
 dependencies {
+
     // Use the latest Groovy version for building this library
     implementation 'org.codehaus.groovy:groovy-all:2.5.4'
 
